# wyag_in_rust

./: .gitignore  Cargo.toml  README.md
scripts/: commands.py  generate.py  pack.py  recipe_helpers.py  snapshots.py  unpack.py
scripts/recipes/: add_all.py  add_all_removed.py  add_directory.py  add_directory_removed.py  add_file.py  add_file_removed.py  add_files.py  commit.py  commit_to_pristine_repo.py  (+18 more)
snapshots/: after_add_all.7z  after_add_all_removed.7z  after_add_directory.7z  after_add_directory_removed.7z  after_add_file.7z  after_add_file_removed.7z  after_add_files.7z  after_commit.7z  after_commit_to_pristine_repo.7z  after_create_annotated_tag.7z  after_create_branch.7z  after_create_branch_with_starting_point.7z  after_create_lightweight_tag.7z  after_delete_branch.7z  after_delete_tag.7z  after_hash_blob.7z  after_rm_directory.7z  after_rm_file.7z  after_rm_rejects_staged_changes.7z  after_switch_fails_with_unstaged_changes.7z  after_switch_to_existing_branch.7z  after_switch_to_headless.7z  after_switch_to_new_branch.7z  before_add_all.7z  before_add_all_removed.7z  before_add_directory.7z  before_add_directory_removed.7z  before_add_file.7z  before_add_file_removed.7z  before_add_files.7z  before_commit.7z  before_commit_to_pristine_repo.7z  before_create_annotated_tag.7z  before_create_branch.7z  before_create_branch_with_starting_point.7z  before_create_lightweight_tag.7z  before_delete_branch.7z  before_delete_fails_with_current_branch.7z  before_delete_fails_with_unmerged_branch.7z  before_delete_tag.7z  (+12 more)
src/: branch.rs  cli.rs  commands.rs  error.rs  index.rs  kvlm.rs  lib.rs  main.rs  object.rs  refs.rs  repo.rs  workdir.rs
tests/: cmd_add.rs  cmd_branch.rs  cmd_commit.rs  cmd_hash_object.rs  cmd_init.rs  cmd_rm.rs  cmd_switch.rs  cmd_tag.rs
(+15 files in other folders)
