[package]
name = "wyag"
version = "0.1.0"
edition = "2021"
description = "An implementation of git following a guide by Thibault Polge"
authors = [ "Robin O'Connell" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.0", features = ["derive"] }
configparser = "3.0.2"
flate2 = "1.0.25"
regex = "1.7.1"
sha1 = "0.10.5"
