[package]
name = "wyag"
version = "0.1.0"
edition = "2021"
description = "An implementation of git following a guide by Thibault Polge"
authors = [ "Robin O'Connell" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base16ct = { version = "0.1.1", features = ["alloc"] }
clap = { version = "4.1.0", features = ["derive"] }
flate2 = { version = "1.0.25", features = ["zlib"] }
regex = "1.7.1"
rust-ini = "0.18.0"
sha1 = "0.10.5"
