[package]
name = "wyag"
version = "0.1.0"
edition = "2021"
description = "A simplified git implementation following a guide by Thibault Polge"
authors = [ "Robin O'Connell" ]
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
base16ct = { version = "0.1.1", features = ["alloc"] }
byteorder = "1.4.3"
clap = { version = "4.1.0", features = ["derive"] }
flate2 = { version = "1.0.25", features = ["zlib"] }
itertools = "0.10.5"
ordered-multimap = "0.5.0"
path-absolutize = "3.0.14"
regex = "1.7.1"
rust-ini = "0.18.0"
sha1 = "0.10.5"
thiserror = "1.0.39"

[dev-dependencies]
assert_fs = "1.0.10"
dir-assert = "0.2.0"
predicates = "2.1.5"
zip = "0.6.4"
